cmake_minimum_required(VERSION 3.23)
project(Mindshell C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libs/libft)

add_executable(Mindshell
        inc/minishell.h
        libs/libft/ft_atoi.c
        libs/libft/ft_bzero.c
        libs/libft/ft_calloc.c
        libs/libft/ft_isalnum.c
        libs/libft/ft_isalpha.c
        libs/libft/ft_isascii.c
        libs/libft/ft_isdigit.c
        libs/libft/ft_isprint.c
        libs/libft/ft_itoa.c
        libs/libft/ft_lstadd_back.c
        libs/libft/ft_lstadd_front.c
        libs/libft/ft_lstclear.c
        libs/libft/ft_lstdelone.c
        libs/libft/ft_lstiter.c
        libs/libft/ft_lstlast.c
        libs/libft/ft_lstmap.c
        libs/libft/ft_lstnew.c
        libs/libft/ft_lstsize.c
        libs/libft/ft_memchr.c
        libs/libft/ft_memcmp.c
        libs/libft/ft_memcpy.c
        libs/libft/ft_memmove.c
        libs/libft/ft_memset.c
        libs/libft/ft_one_split.c
        libs/libft/ft_putchar_fd.c
        libs/libft/ft_putendl_fd.c
        libs/libft/ft_putnbr_fd.c
        libs/libft/ft_putstr_fd.c
        libs/libft/ft_split.c
        libs/libft/ft_strchr.c
        libs/libft/ft_strdup.c
        libs/libft/ft_striteri.c
        libs/libft/ft_strjoin.c
        libs/libft/ft_strlcat.c
        libs/libft/ft_strlcpy.c
        libs/libft/ft_strlen.c
        libs/libft/ft_strmapi.c
        libs/libft/ft_strncmp.c
        libs/libft/ft_strnstr.c
        libs/libft/ft_strrchr.c
        libs/libft/ft_strtrim.c
        libs/libft/ft_substr.c
        libs/libft/ft_tolower.c
        libs/libft/ft_toupper.c
        libs/libft/libft.h
        src/categorize.c
        src/check_if_cmd.c
        src/clean_up.c
        src/clean_up_utils.c
        src/correct_order.c
        src/error.c
        src/executer.c
        src/expand_variables.c
        src/ft_cd.c
        src/ft_clear.c
        src/ft_echo.c
        src/ft_env.c
        src/ft_exit.c
        src/ft_export.c
        src/ft_export_sub.c
        src/ft_export_sub_sub.c
        src/ft_message.c
        src/ft_pwd.c
        src/ft_split_lexer.c
        src/ft_unset.c
        src/helpers_builtins.c
        src/helpers_fds.c
        src/heredoc.c
        src/init.c
        src/main.c
        src/make_env_arr.c
        src/parser.c
        src/parser_utils.c
        src/redirect_and_pipe_helpers.c
        src/tests.c)
